[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correlation"
version = "0.1.0"
description = "Analyzing PLTR/NVDA pairwise correlation vs shared QQQ beta exposure"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["correlation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
